--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,47 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap");
+
+*{
+  font-family: "Quicksand";
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.hello-text{
+  font-size: 19px;
+}
+.nav-section{
+  justify-items: center;
+  top: 0;
+  border-bottom: 1px solid #ccc;
+  box-shadow: 0 0 15px  rgba(0,0,0,0.6);
+  height: 70px;
+  align-content: center;
+}
+.links{
+  display: flex;
+  justify-content: space-between;
+  color: slateblue;
+  justify-items: center;
+  font-size: 20px;
+  font-weight: bold;
+  /* border-bottom: 3px solid rgb(0, 140, 255); */
+}
+
+.nav-link:hover{
+  text-shadow: 0 0 10px rgba(169, 36, 218, 0.6);
+}
+
+.nav-link{
+  margin:  0 35px;
+  margin-bottom: 15px;
+
+}
+
+.form-field{
+  width: 75%;
+  margin-left: 12.5%;
+}
+
+.submit-btn{
+  margin-left: 12.5%;
 }
